# minivan

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test_and_lint.yml
assets/: results.jsonl
benchmark/: README.md  benchmark.md  benchmark.py  download_embeddings.py  visualise.py
experiments/benchmark/: README.md  benchmark.py  download_embeddings.py  visualise.py
minivan/: index.py  metrics.py
minivn/: minivn.py
minivnn/: minivnn.py
tests/: test_index.py  test_metrics.py  test_minivn.py  test_minivnn.py
