[tool.poetry]
name = "minivnn"
version = "0.1.0"
description = "Fast, scalable (up to a reasonable scale) exact nearest neighbour search"
authors = ["aismlv <adilzhan.ismailov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
